Small refactor to abstract out tag generation and add more tags!